--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Asteroids Game</title>
 </head>
 <body>
     <main>
         <div class="canvasContainer">
             <!-- <embed src="img/fundo.svg" alt="" id="background"> -->
-            <canvas id="canvas" style="border:solid 1px black"> Your browser does not support HTML5 Canvas.</canvas>
+            <canvas id="canvas" style="background-color: rgb(132, 69, 143);"> Your browser does not support HTML5 Canvas.</canvas>
         </div>
         <menu id="startMenu">
             <div class="firstContainer">
@@ -43,6 +43,6 @@
             
         
     </main>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
