--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
             <!-- <embed src="img/fundo.svg" alt="" id="background"> -->
             <canvas id="canvas" style="background-color: rgb(132, 69, 143);"> Your browser does not support HTML5 Canvas.</canvas>
         </div>
+        <div class="highScore">
+            <p id="highScoreValue"></p>
+        </div>
+        <div class="score">
+            <p id="scoreValue"></p>
+        </div>
+        <div class="lives">
+            <p id="livesValue"></p>
+        </div>
         <menu id="startMenu">
             <div class="firstContainer">
                 <div class="container">
