Commit Entrega intermédia

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
             <!-- <embed src="img/fundo.svg" alt="" id="background"> -->
             <canvas id="canvas" style="background-color: rgb(132, 69, 143);"> Your browser does not support HTML5 Canvas.</canvas>
         </div>
+
+        <div class="initialAnimation">
+            <img src="./img/nave.png" alt="" class=" nave slide-in-bottom floating">
+            <p class="focus-in-expand font">ASTEROIDS</p>
+        </div>
+
         <div class="highScore">
             <p id="highScoreValue"></p>
         </div>
