Menu options, musica

--- a/Asteroids - intro/introAsteroides.html
+++ b/Asteroids - intro/introAsteroides.html
@@ -11,10 +11,20 @@
 </head>
 
 <body>
+    <div>
+        <audio controls src="./mp3/Space Oddity (8-Bits).mp3" autoplay="true"></audio>
+        <audio controls src="./mp3/Gunshot.mp3" id="gunshotSound" type="audio/mp3"></audio>
+        <audio controls src="./mp3/UFO noise.mp3" id="ufoSound" type="audio/mp3"></audio>
+        <audio controls src="./mp3/Explosion.mp3" id="explosionSound" type="audio/mp3"></audio>
+        <audio controls src="./mp3/asteroid.mp3" id="asteroidSound" type="audio/mp3"></audio>
+    </div>
+
+
     <main>
         <div class="canvasContainer">
             <!-- <embed src="img/fundo.svg" alt="" id="background"> -->
-            <canvas id="canvas" style="background-color: rgb(132, 69, 143);"> Your browser does not support HTML5 Canvas.</canvas>
+            <canvas id="canvas" style="background-color: rgb(132, 69, 143);"> Your browser does not support HTML5
+                Canvas.</canvas>
         </div>
 
         <div class="containerAlien">
