--- a/Asteroids-Game-main/index.html
+++ b/Asteroids-Game-main/index.html
@@ -13,15 +13,22 @@
 </head>
 
 <body>
-    <div id="soundEffects" style="display: none">
+    <!-- <div id="soundEffects" style="display: none">
         <audio controls src="./mp3/Gunshot.mp3" id="gunshotSound" type="audio/mp3"></audio>
         <audio controls src="./mp3/UFO noise.mp3" id="ufoSound" type="audio/mp3"></audio>
         <audio controls src="./mp3/Explosion.mp3" id="explosionSound" type="audio/mp3"></audio>
         <audio controls src="./mp3/asteroid.mp3" id="asteroidSound" type="audio/mp3"></audio>
-    </div>
+    </div> -->
 
-    <div id="music" style="display: none">
+    <!-- <div id="music" style="display: none">
         <audio controls src="./mp3/Space Oddity (8-Bits).mp3" autoplay="true"></audio>
+    </div> -->
+
+    <div>
+        <audio id="initialMusic" >
+            <source src="./mp3/Space Oddity (8-Bits).mp3"type="audio/mpeg">
+        </audio>
+        <audio src="./mp3/Gunshot.mp3" id="gunshotSound" type="audio/mpeg"></audio>
     </div>
 
     <main class="main">
