--- a/Asteroids-Game-main/index.html
+++ b/Asteroids-Game-main/index.html
@@ -7,9 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="./img/asteroid.png" type="image/x-icon">
-    <title>ASTEROIDS
-
-    </title>
+    <title>ASTEROIDS</title>
 </head>
 
 <body>
@@ -48,7 +46,7 @@
         </div>
 
         <!-- Menu start, que surge no inicio, com opções para o jogador -->
-
+        <!-- Atenção, clicar só uma vez no botão start e deixar carregar -->
         <menu id="startMenu">
             <div class="firstContainer">
                 <div class="container">
@@ -160,7 +158,7 @@
                 </div>
                 <div class="container">
                     <div class="block">
-                        <div class="btn btn2" id="quitButton2" onclick="quit()">
+                        <div class="btn btn2" id="quitButton2" onclick="window.close()">
                             <h4>Quit</h4>
                         </div>
                     </div>
