--- a/Asteroids-Game-main/index.html
+++ b/Asteroids-Game-main/index.html
@@ -10,6 +10,22 @@
     <title>ASTEROIDS</title>
 </head>
 
+<!-- As componentes realistas foram retiradas da internet, com busca no google imagens -->
+<!-- Estes são os sitios
+https://key0.cc/freepng/75595-Designs-Spacecraft-Png-Vaisseau-spatial-vue-d-oiseau
+https://esquilo.io/png/ufo-png-hd-quality
+https://www.nicepng.com/ourpic/u2q8o0o0a9u2r5q8_asteroid-app-asteroid-png/ -->
+<!-- Os componentes pixelizados foram inspirados por assets encontrados na internet -->
+<!-- Créditos ao criar do fundo pixelizado: https://coolwallpapers.me/2843034-video-games-pixels-pixel-art-steredenn-indie-games-space-nebula.html -->
+
+<!-- Os áudios foram retirados do youtube, procurando por "nome" sound pixel -->
+<!-- Música utilizada no jogo: https://www.youtube.com/watch?v=SM6NEoex4ws -->
+
+<!-- O estilo dos botões e o menu options foram inspirados por códigos presentes no codepen -->
+
+<!-- O código do slideshow/carousel foi maioritariamente retirado do código disponibilizado pelo w3schools -->
+<!-- https://www.w3schools.com/howto/howto_js_slideshow.asp -->
+
 <body>
     <!-- Componente div com os audios utilizados nesta página html -->
     <div>
@@ -158,7 +174,7 @@
                 </div>
                 <div class="container">
                     <div class="block">
-                        <div class="btn btn2" id="quitButton2" onclick="window.close()">
+                        <div class="btn btn2" id="quitButton2" onclick="self.close()">
                             <h4>Quit</h4>
                         </div>
                     </div>
