--- a/Asteroids - intro/introAsteroides.html
+++ b/Asteroids - intro/introAsteroides.html
@@ -10,6 +10,8 @@
     <title>ASTEROIDS</title>
 </head>
 
+<!-- As animações realizadas foram construidas utilizando websites de animação automatica, como o https://webcode.tools/generators/css/keyframe-animation e o https://animista.net/ -->
+
 <body>
     <!-- div que vai permitir a inserção da música e dos sons na introdução -->
     <div>
