Final com referencias

--- a/Asteroids-Game-main/index.html
+++ b/Asteroids-Game-main/index.html
@@ -21,10 +21,11 @@ https://www.nicepng.com/ourpic/u2q8o0o0a9u2r5q8_asteroid-app-asteroid-png/ -->
 <!-- Os áudios foram retirados do youtube, procurando por "nome" sound pixel -->
 <!-- Música utilizada no jogo: https://www.youtube.com/watch?v=SM6NEoex4ws -->
 
-<!-- O estilo dos botões e o menu options foram inspirados por códigos presentes no codepen -->
+<!-- O estilo dos botões, o menu options e os sliders foram inspirados por códigos presentes no codepen -->
 
-<!-- O código do slideshow/carousel foi maioritariamente retirado do código disponibilizado pelo w3schools -->
+<!-- O código do slideshow/carousel e dos sliders foi maioritariamente retirado do código disponibilizado pelo w3schools -->
 <!-- https://www.w3schools.com/howto/howto_js_slideshow.asp -->
+<!-- https://www.w3schools.com/howto/howto_js_rangeslider.asp -->
 
 <body>
     <!-- Componente div com os audios utilizados nesta página html -->
